Moar features to plugin.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "feedparser": "~0.19.2",
     "moment": "~2.8.4",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "cheerio": "~0.18.0",
+    "shorturl": "0.0.3"
   }
 }
